fix race in access to TO_UPPER_CACHE